--- a/cooking-website/package.json
+++ b/cooking-website/package.json
@@ -2,5 +2,10 @@
   "name": "cooking-website",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-react": "^6.24.1"
+  }
 }
